--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add/Edit Employee</title>
     <link rel="stylesheet" href="assets/styles.css" />
     <link rel="stylesheet" href="assets/form.css">
@@ -11,7 +12,10 @@
 <body>
     <header class="top-bar">
         <div class="left-section">
-            <h1>Employee Directory</h1>
+            <h1>
+                <a href="index.html" style="text-decoration:none; color:inherit; outline: none; border: none;">Employee
+                    Directory</a>
+            </h1>
             <input type="text" id="searchBar" placeholder="Search by name/email" />
         </div>
         <div class="right-section">
