--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <header class="top-bar">
         <div class="left-section">
-            <h1>Employee Directory</h1>
+            <h1>
+                <a href="index.html" style="text-decoration:none; color:inherit; outline: none; border: none;">Employee
+                    Directory</a>
+            </h1>
             <input type="text" id="searchBar" placeholder="Search by name/email" />
         </div>
         <div class="right-section">
@@ -21,9 +24,11 @@
     </header>
 
     <aside id="filterSidebar" class="hidden filter-section">
+        <label for="filterDepartment" class="filter-label">Department:</label>
         <select id="filterDepartment" class="filter-dropdown">
             <option value="">All Departments</option>
         </select>
+        <label for="filterRole" class="filter-label">Role:</label>
         <select id="filterRole" class="filter-dropdown">
             <option value="">All Roles</option>
         </select>
